analizer/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    BREAK
    CONTINUE
    DEFER
    FALLTHROUGH
    GO
    INTERFACE
    SELECT
    STRING_UNCLOSE

Grammar

Rule 0     S' -> program
Rule 1     program -> statement_list
Rule 2     statement_list -> statement
Rule 3     statement_list -> statement_list statement
Rule 4     statement -> assignment
Rule 5     statement -> input
Rule 6     statement -> llamarFuncion
Rule 7     statement -> print_statement
Rule 8     statement -> struct_definition
Rule 9     statement -> for_statement
Rule 10    statement -> package
Rule 11    statement -> import
Rule 12    statement -> switch
Rule 13    statement -> map
Rule 14    statement -> if_statement
Rule 15    statement -> function
Rule 16    statement -> method_definition
Rule 17    statement -> function_literal
Rule 18    package -> PACKAGE MAIN
Rule 19    package -> PACKAGE IDENTIFIER
Rule 20    import -> IMPORT STRING
Rule 21    import -> IMPORT LPAREN import_list RPAREN
Rule 22    import_list -> STRING
Rule 23    import_list -> import_list STRING
Rule 24    arguments -> expression
Rule 25    arguments -> arguments COMMA expression
Rule 26    arguments -> <empty>
Rule 27    const_declaration -> CONST IDENTIFIER ASSIGN expression
Rule 28    input -> IDENTIFIER DOT IDENTIFIER LPAREN AMPERSAND IDENTIFIER RPAREN
Rule 29    var_declaration -> VAR IDENTIFIER DATATYPE
Rule 30    assignment -> IDENTIFIER DECLARE_ASSIGN expression
Rule 31    assignment -> VAR IDENTIFIER DATATYPE ASSIGN expression
Rule 32    assignment -> VAR IDENTIFIER DATATYPE ASSIGN llamarFuncion
Rule 33    assignment -> IDENTIFIER ASSIGN expression
Rule 34    llamarFuncion -> IDENTIFIER LPAREN argument_list_opt RPAREN
Rule 35    expression -> expression comparador expression
Rule 36    expression -> expression operadorLogico expression
Rule 37    argument_list -> expression
Rule 38    argument_list -> argument_list COMMA expression
Rule 39    argument_list_opt -> argument_list
Rule 40    argument_list_opt -> <empty>
Rule 41    condicion -> expression comparador expression
Rule 42    condicion_compleja -> condicion operadorLogico condicion
Rule 43    condicion_compleja -> condicion operadorLogico condicion_compleja
Rule 44    operadorLogico -> AND
Rule 45    operadorLogico -> OR
Rule 46    comparador -> EQ
Rule 47    comparador -> NEQ
Rule 48    comparador -> GT
Rule 49    comparador -> LT
Rule 50    comparador -> GE
Rule 51    comparador -> LE
Rule 52    empty -> <empty>
Rule 53    switch -> SWITCH expression LBRACE caseBlocks RBRACE
Rule 54    caseBlocks -> caseBlock
Rule 55    caseBlocks -> caseBlock caseBlocks
Rule 56    caseBlock -> CASE expression COLON statement_list
Rule 57    caseBlock -> DEFAULT COLON statement_list
Rule 58    map -> IDENTIFIER DECLARE_ASSIGN mapLiteral
Rule 59    map -> VAR IDENTIFIER ASSIGN mapLiteral
Rule 60    mapLiteral -> MAP LBRACKET DATATYPE RBRACKET DATATYPE LBRACE mapEntries RBRACE
Rule 61    mapEntries -> mapEntry
Rule 62    mapEntries -> mapEntry COMMA mapEntries
Rule 63    mapEntry -> value_key COLON value_key
Rule 64    value_key -> expression
Rule 65    value_key -> STRING
Rule 66    function -> FUNC IDENTIFIER LPAREN params_opt RPAREN return_type block
Rule 67    function -> FUNC IDENTIFIER LPAREN params_opt RPAREN return_type LBRACE statement_list RETURN expression RBRACE
Rule 68    function -> FUNC MAIN LPAREN params_opt RPAREN block
Rule 69    return_statement -> RETURN expression
Rule 70    params_opt -> params
Rule 71    params_opt -> empty
Rule 72    params -> param
Rule 73    params -> param COMMA params
Rule 74    param -> IDENTIFIER type_name
Rule 75    type_name -> DATATYPE
Rule 76    type_name -> IDENTIFIER
Rule 77    print_statement -> IDENTIFIER DOT IDENTIFIER LPAREN argument_list_opt RPAREN
Rule 78    struct_definition -> TYPE IDENTIFIER STRUCT LBRACE struct_fields RBRACE
Rule 79    struct_field -> IDENTIFIER DATATYPE
Rule 80    struct_fields -> struct_field
Rule 81    struct_fields -> struct_fields struct_field
Rule 82    method_definition -> FUNC LPAREN IDENTIFIER IDENTIFIER RPAREN IDENTIFIER LPAREN arguments RPAREN block
Rule 83    for_statement -> FOR shortAssignment SEMICOLON condicion SEMICOLON expression block
Rule 84    identifier_list -> IDENTIFIER
Rule 85    identifier_list -> IDENTIFIER COMMA identifier_list
Rule 86    shortAssignment -> identifier_list DECLARE_ASSIGN expression
Rule 87    for_statement -> FOR condicion block
Rule 88    for_statement -> FOR block
Rule 89    for_range_clause -> shortAssignment RANGE expression
Rule 90    block -> LBRACE statement_list RBRACE
Rule 91    block -> LBRACE RBRACE
Rule 92    expression -> NUMBER
Rule 93    expression -> IDENTIFIER
Rule 94    expression -> RUNE
Rule 95    expression -> STRING
Rule 96    expression -> RAW_STRING
Rule 97    expression -> TRUE
Rule 98    expression -> FALSE
Rule 99    expression -> NIL
Rule 100   expression -> expression operator expression
Rule 101   expression -> expression DOT IDENTIFIER
Rule 102   operator -> PLUS
Rule 103   operator -> MINUS
Rule 104   operator -> TIMES
Rule 105   operator -> DIVIDE
Rule 106   operator -> MOD
Rule 107   expression -> MINUS expression
Rule 108   expression -> LPAREN expression RPAREN
Rule 109   if_statement -> IF condicion_compleja block
Rule 110   if_statement -> IF condicion_compleja block ELSE block
Rule 111   function_literal -> FUNC LPAREN parameters RPAREN return_type block
Rule 112   parameters -> parameters COMMA parameter
Rule 113   parameters -> parameter
Rule 114   parameters -> empty
Rule 115   parameter -> IDENTIFIER DATATYPE
Rule 116   parameter -> IDENTIFIER FUNC LPAREN parameters RPAREN DATATYPE
Rule 117   return_type -> DATATYPE
Rule 118   return_type -> empty
Rule 119   slice_declaration -> VAR IDENTIFIER LBRACKET RBRACKET type_name
Rule 120   declare_assign -> IDENTIFIER DECLARE_ASSIGN slice_literal
Rule 121   slice_literal -> LBRACKET RBRACKET type_name LBRACE elements RBRACE
Rule 122   elements -> elements COMMA expression
Rule 123   elements -> expression

Terminals, with rules where they appear

AMPERSAND            : 28
AND                  : 44
ASSIGN               : 27 31 32 33 59
BREAK                : 
CASE                 : 56
COLON                : 56 57 63
COMMA                : 25 38 62 73 85 112 122
CONST                : 27
CONTINUE             : 
DATATYPE             : 29 31 32 60 60 75 79 115 116 117
DECLARE_ASSIGN       : 30 58 86 120
DEFAULT              : 57
DEFER                : 
DIVIDE               : 105
DOT                  : 28 77 101
ELSE                 : 110
EQ                   : 46
FALLTHROUGH          : 
FALSE                : 98
FOR                  : 83 87 88
FUNC                 : 66 67 68 82 111 116
GE                   : 50
GO                   : 
GT                   : 48
IDENTIFIER           : 19 27 28 28 28 29 30 31 32 33 34 58 59 66 67 74 76 77 77 78 79 82 82 82 84 85 93 101 115 116 119 120
IF                   : 109 110
IMPORT               : 20 21
INTERFACE            : 
LBRACE               : 53 60 67 78 90 91 121
LBRACKET             : 60 119 121
LE                   : 51
LPAREN               : 21 28 34 66 67 68 77 82 82 108 111 116
LT                   : 49
MAIN                 : 18 68
MAP                  : 60
MINUS                : 103 107
MOD                  : 106
NEQ                  : 47
NIL                  : 99
NUMBER               : 92
OR                   : 45
PACKAGE              : 18 19
PLUS                 : 102
RANGE                : 89
RAW_STRING           : 96
RBRACE               : 53 60 67 78 90 91 121
RBRACKET             : 60 119 121
RETURN               : 67 69
RPAREN               : 21 28 34 66 67 68 77 82 82 108 111 116
RUNE                 : 94
SELECT               : 
SEMICOLON            : 83 83
STRING               : 20 22 23 65 95
STRING_UNCLOSE       : 
STRUCT               : 78
SWITCH               : 53
TIMES                : 104
TRUE                 : 97
TYPE                 : 78
VAR                  : 29 31 32 59 119
error                : 

Nonterminals, with rules where they appear

argument_list        : 38 39
argument_list_opt    : 34 77
arguments            : 25 82
assignment           : 4
block                : 66 68 82 83 87 88 109 110 110 111
caseBlock            : 54 55
caseBlocks           : 53 55
comparador           : 35 41
condicion            : 42 42 43 83 87
condicion_compleja   : 43 109 110
const_declaration    : 
declare_assign       : 
elements             : 121 122
empty                : 71 114 118
expression           : 24 25 27 30 31 33 35 35 36 36 37 38 41 41 53 56 64 67 69 83 86 89 100 100 101 107 108 122 123
for_range_clause     : 
for_statement        : 9
function             : 15
function_literal     : 17
identifier_list      : 85 86
if_statement         : 14
import               : 11
import_list          : 21 23
input                : 5
llamarFuncion        : 6 32
map                  : 13
mapEntries           : 60 62
mapEntry             : 61 62
mapLiteral           : 58 59
method_definition    : 16
operadorLogico       : 36 42 43
operator             : 100
package              : 10
param                : 72 73
parameter            : 112 113
parameters           : 111 112 116
params               : 70 73
params_opt           : 66 67 68
print_statement      : 7
program              : 0
return_statement     : 
return_type          : 66 67 111
shortAssignment      : 83 89
slice_declaration    : 
slice_literal        : 120
statement            : 2 3
statement_list       : 1 3 56 57 67 90
struct_definition    : 8
struct_field         : 80 81
struct_fields        : 78 81
switch               : 12
type_name            : 74 119 121
value_key            : 63 63
var_declaration      : 

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . statement_list
    (2) statement_list -> . statement
    (3) statement_list -> . statement_list statement
    (4) statement -> . assignment
    (5) statement -> . input
    (6) statement -> . llamarFuncion
    (7) statement -> . print_statement
    (8) statement -> . struct_definition
    (9) statement -> . for_statement
    (10) statement -> . package
    (11) statement -> . import
    (12) statement -> . switch
    (13) statement -> . map
    (14) statement -> . if_statement
    (15) statement -> . function
    (16) statement -> . method_definition
    (17) statement -> . function_literal
    (30) assignment -> . IDENTIFIER DECLARE_ASSIGN expression
    (31) assignment -> . VAR IDENTIFIER DATATYPE ASSIGN expression
    (32) assignment -> . VAR IDENTIFIER DATATYPE ASSIGN llamarFuncion
    (33) assignment -> . IDENTIFIER ASSIGN expression
    (28) input -> . IDENTIFIER DOT IDENTIFIER LPAREN AMPERSAND IDENTIFIER RPAREN
    (34) llamarFuncion -> . IDENTIFIER LPAREN argument_list_opt RPAREN
    (77) print_statement -> . IDENTIFIER DOT IDENTIFIER LPAREN argument_list_opt RPAREN
    (78) struct_definition -> . TYPE IDENTIFIER STRUCT LBRACE struct_fields RBRACE
    (83) for_statement -> . FOR shortAssignment SEMICOLON condicion SEMICOLON expression block
    (87) for_statement -> . FOR condicion block
    (88) for_statement -> . FOR block
    (18) package -> . PACKAGE MAIN
    (19) package -> . PACKAGE IDENTIFIER
    (20) import -> . IMPORT STRING
    (21) import -> . IMPORT LPAREN import_list RPAREN
    (53) switch -> . SWITCH expression LBRACE caseBlocks RBRACE
    (58) map -> . IDENTIFIER DECLARE_ASSIGN mapLiteral
    (59) map -> . VAR IDENTIFIER ASSIGN mapLiteral
    (109) if_statement -> . IF condicion_compleja block
    (110) if_statement -> . IF condicion_compleja block ELSE block
    (66) function -> . FUNC IDENTIFIER LPAREN params_opt RPAREN return_type block
    (67) function -> . FUNC IDENTIFIER LPAREN params_opt RPAREN return_type LBRACE statement_list RETURN expression RBRACE
    (68) function -> . FUNC MAIN LPAREN params_opt RPAREN block
    (82) method_definition -> . FUNC LPAREN IDENTIFIER IDENTIFIER RPAREN IDENTIFIER LPAREN arguments RPAREN block
    (111) function_literal -> . FUNC LPAREN parameters RPAREN return_type block

    IDENTIFIER      shift and go to state 18
    VAR             shift and go to state 19
    TYPE            shift and go to state 20
    FOR             shift and go to state 21
    PACKAGE         shift and go to state 22
    IMPORT          shift and go to state 23
    SWITCH          shift and go to state 24
    IF              shift and go to state 25
    FUNC            shift and go to state 26

    program                        shift and go to state 1
    statement_list                 shift and go to state 2
    statement                      shift and go to state 3
    assignment                     shift and go to state 4
    input                          shift and go to state 5
    llamarFuncion                  shift and go to state 6
    print_statement                shift and go to state 7
    struct_definition              shift and go to state 8
    for_statement                  shift and go to state 9
    package                        shift and go to state 10
    import                         shift and go to state 11
    switch                         shift and go to state 12
    map                            shift and go to state 13
    if_statement                   shift and go to state 14
    function                       shift and go to state 15
    method_definition              shift and go to state 16
    function_literal               shift and go to state 17

state 1

    (0) S' -> program .



state 2

    (1) program -> statement_list .
    (3) statement_list -> statement_list . statement
    (4) statement -> . assignment
    (5) statement -> . input
    (6) statement -> . llamarFuncion
    (7) statement -> . print_statement
    (8) statement -> . struct_definition
    (9) statement -> . for_statement
    (10) statement -> . package
    (11) statement -> . import
    (12) statement -> . switch
    (13) statement -> . map
    (14) statement -> . if_statement
    (15) statement -> . function
    (16) statement -> . method_definition
    (17) statement -> . function_literal
    (30) assignment -> . IDENTIFIER DECLARE_ASSIGN expression
    (31) assignment -> . VAR IDENTIFIER DATATYPE ASSIGN expression
    (32) assignment -> . VAR IDENTIFIER DATATYPE ASSIGN llamarFuncion
    (33) assignment -> . IDENTIFIER ASSIGN expression
    (28) input -> . IDENTIFIER DOT IDENTIFIER LPAREN AMPERSAND IDENTIFIER RPAREN
    (34) llamarFuncion -> . IDENTIFIER LPAREN argument_list_opt RPAREN
    (77) print_statement -> . IDENTIFIER DOT IDENTIFIER LPAREN argument_list_opt RPAREN
    (78) struct_definition -> . TYPE IDENTIFIER STRUCT LBRACE struct_fields RBRACE
    (83) for_statement -> . FOR shortAssignment SEMICOLON condicion SEMICOLON expression block
    (87) for_statement -> . FOR condicion block
    (88) for_statement -> . FOR block
    (18) package -> . PACKAGE MAIN
    (19) package -> . PACKAGE IDENTIFIER
    (20) import -> . IMPORT STRING
    (21) import -> . IMPORT LPAREN import_list RPAREN
    (53) switch -> . SWITCH expression LBRACE caseBlocks RBRACE
    (58) map -> . IDENTIFIER DECLARE_ASSIGN mapLiteral
    (59) map -> . VAR IDENTIFIER ASSIGN mapLiteral
    (109) if_statement -> . IF condicion_compleja block
    (110) if_statement -> . IF condicion_compleja block ELSE block
    (66) function -> . FUNC IDENTIFIER LPAREN params_opt RPAREN return_type block
    (67) function -> . FUNC IDENTIFIER LPAREN params_opt RPAREN return_type LBRACE statement_list RETURN expression RBRACE
    (68) function -> . FUNC MAIN LPAREN params_opt RPAREN block
    (82) method_definition -> . FUNC LPAREN IDENTIFIER IDENTIFIER RPAREN IDENTIFIER LPAREN arguments RPAREN block
    (111) function_literal -> . FUNC LPAREN parameters RPAREN return_type block

    $end            reduce using rule 1 (program -> statement_list .)
    IDENTIFIER      shift and go to state 18
    VAR             shift and go to state 19
    TYPE            shift and go to state 20
    FOR             shift and go to state 21
    PACKAGE         shift and go to state 22
    IMPORT          shift and go to state 23
    SWITCH          shift and go to state 24
    IF              shift and go to state 25
    FUNC            shift and go to state 26

    statement                      shift and go to state 27
    assignment                     shift and go to state 4
    input                          shift and go to state 5
    llamarFuncion                  shift and go to state 6
    print_statement                shift and go to state 7
    struct_definition              shift and go to state 8
    for_statement                  shift and go to state 9
    package                        shift and go to state 10
    import                         shift and go to state 11
    switch                         shift and go to state 12
    map                            shift and go to state 13
    if_statement                   shift and go to state 14
    function                       shift and go to state 15
    method_definition              shift and go to state 16
    function_literal               shift and go to state 17

state 3

    (2) statement_list -> statement .

    IDENTIFIER      reduce using rule 2 (statement_list -> statement .)
    VAR             reduce using rule 2 (statement_list -> statement .)
    TYPE            reduce using rule 2 (statement_list -> statement .)
    FOR             reduce using rule 2 (statement_list -> statement .)
    PACKAGE         reduce using rule 2 (statement_list -> statement .)
    IMPORT          reduce using rule 2 (statement_list -> statement .)
    SWITCH          reduce using rule 2 (statement_list -> statement .)
    IF              reduce using rule 2 (statement_list -> statement .)
    FUNC            reduce using rule 2 (statement_list -> statement .)
    $end            reduce using rule 2 (statement_list -> statement .)
    RBRACE          reduce using rule 2 (statement_list -> statement .)
    CASE            reduce using rule 2 (statement_list -> statement .)
    DEFAULT         reduce using rule 2 (statement_list -> statement .)
    RETURN          reduce using rule 2 (statement_list -> statement .)


state 4

    (4) statement -> assignment .

    IDENTIFIER      reduce using rule 4 (statement -> assignment .)
    VAR             reduce using rule 4 (statement -> assignment .)
    TYPE            reduce using rule 4 (statement -> assignment .)
    FOR             reduce using rule 4 (statement -> assignment .)
    PACKAGE         reduce using rule 4 (statement -> assignment .)
    IMPORT          reduce using rule 4 (statement -> assignment .)
    SWITCH          reduce using rule 4 (statement -> assignment .)
    IF              reduce using rule 4 (statement -> assignment .)
    FUNC            reduce using rule 4 (statement -> assignment .)
    $end            reduce using rule 4 (statement -> assignment .)
    RBRACE          reduce using rule 4 (statement -> assignment .)
    CASE            reduce using rule 4 (statement -> assignment .)
    DEFAULT         reduce using rule 4 (statement -> assignment .)
    RETURN          reduce using rule 4 (statement -> assignment .)


state 5

    (5) statement -> input .

    IDENTIFIER      reduce using rule 5 (statement -> input .)
    VAR             reduce using rule 5 (statement -> input .)
    TYPE            reduce using rule 5 (statement -> input .)
    FOR             reduce using rule 5 (statement -> input .)
    PACKAGE         reduce using rule 5 (statement -> input .)
    IMPORT          reduce using rule 5 (statement -> input .)
    SWITCH          reduce using rule 5 (statement -> input .)
    IF              reduce using rule 5 (statement -> input .)
    FUNC            reduce using rule 5 (statement -> input .)
    $end            reduce using rule 5 (statement -> input .)
    RBRACE          reduce using rule 5 (statement -> input .)
    CASE            reduce using rule 5 (statement -> input .)
    DEFAULT         reduce using rule 5 (statement -> input .)
    RETURN          reduce using rule 5 (statement -> input .)


state 6

    (6) statement -> llamarFuncion .

    IDENTIFIER      reduce using rule 6 (statement -> llamarFuncion .)
    VAR             reduce using rule 6 (statement -> llamarFuncion .)
    TYPE            reduce using rule 6 (statement -> llamarFuncion .)
    FOR             reduce using rule 6 (statement -> llamarFuncion .)
    PACKAGE         reduce using rule 6 (statement -> llamarFuncion .)
    IMPORT          reduce using rule 6 (statement -> llamarFuncion .)
    SWITCH          reduce using rule 6 (statement -> llamarFuncion .)
    IF              reduce using rule 6 (statement -> llamarFuncion .)
    FUNC            reduce using rule 6 (statement -> llamarFuncion .)
    $end            reduce using rule 6 (statement -> llamarFuncion .)
    RBRACE          reduce using rule 6 (statement -> llamarFuncion .)
    CASE            reduce using rule 6 (statement -> llamarFuncion .)
    DEFAULT         reduce using rule 6 (statement -> llamarFuncion .)
    RETURN          reduce using rule 6 (statement -> llamarFuncion .)


state 7

    (7) statement -> print_statement .

    IDENTIFIER      reduce using rule 7 (statement -> print_statement .)
    VAR             reduce using rule 7 (statement -> print_statement .)
    TYPE            reduce using rule 7 (statement -> print_statement .)
    FOR             reduce using rule 7 (statement -> print_statement .)
    PACKAGE         reduce using rule 7 (statement -> print_statement .)
    IMPORT          reduce using rule 7 (statement -> print_statement .)
    SWITCH          reduce using rule 7 (statement -> print_statement .)
    IF              reduce using rule 7 (statement -> print_statement .)
    FUNC            reduce using rule 7 (statement -> print_statement .)
    $end            reduce using rule 7 (statement -> print_statement .)
    RBRACE          reduce using rule 7 (statement -> print_statement .)
    CASE            reduce using rule 7 (statement -> print_statement .)
    DEFAULT         reduce using rule 7 (statement -> print_statement .)
    RETURN          reduce using rule 7 (statement -> print_statement .)


state 8

    (8) statement -> struct_definition .

    IDENTIFIER      reduce using rule 8 (statement -> struct_definition .)
    VAR             reduce using rule 8 (statement -> struct_definition .)
    TYPE            reduce using rule 8 (statement -> struct_definition .)
    FOR             reduce using rule 8 (statement -> struct_definition .)
    PACKAGE         reduce using rule 8 (statement -> struct_definition .)
    IMPORT          reduce using rule 8 (statement -> struct_definition .)
    SWITCH          reduce using rule 8 (statement -> struct_definition .)
    IF              reduce using rule 8 (statement -> struct_definition .)
    FUNC            reduce using rule 8 (statement -> struct_definition .)
    $end            reduce using rule 8 (statement -> struct_definition .)
    RBRACE          reduce using rule 8 (statement -> struct_definition .)
    CASE            reduce using rule 8 (statement -> struct_definition .)
    DEFAULT         reduce using rule 8 (statement -> struct_definition .)
    RETURN          reduce using rule 8 (statement -> struct_definition .)


state 9

    (9) statement -> for_statement .

    IDENTIFIER      reduce using rule 9 (statement -> for_statement .)
    VAR             reduce using rule 9 (statement -> for_statement .)
    TYPE            reduce using rule 9 (statement -> for_statement .)
    FOR             reduce using rule 9 (statement -> for_statement .)
    PACKAGE         reduce using rule 9 (statement -> for_statement .)
    IMPORT          reduce using rule 9 (statement -> for_statement .)
    SWITCH          reduce using rule 9 (statement -> for_statement .)
    IF              reduce using rule 9 (statement -> for_statement .)
    FUNC            reduce using rule 9 (statement -> for_statement .)
    $end            reduce using rule 9 (statement -> for_statement .)
    RBRACE          reduce using rule 9 (statement -> for_statement .)
    CASE            reduce using rule 9 (statement -> for_statement .)
    DEFAULT         reduce using rule 9 (statement -> for_statement .)
    RETURN          reduce using rule 9 (statement -> for_statement .)


state 10

    (10) statement -> package .

    IDENTIFIER      reduce using rule 10 (statement -> package .)
    VAR             reduce using rule 10 (statement -> package .)
    TYPE            reduce using rule 10 (statement -> package .)
    FOR             reduce using rule 10 (statement -> package .)
    PACKAGE         reduce using rule 10 (statement -> package .)
    IMPORT          reduce using rule 10 (statement -> package .)
    SWITCH          reduce using rule 10 (statement -> package .)
    IF              reduce using rule 10 (statement -> package .)
    FUNC            reduce using rule 10 (statement -> package .)
    $end            reduce using rule 10 (statement -> package .)
    RBRACE          reduce using rule 10 (statement -> package .)
    CASE            reduce using rule 10 (statement -> package .)
    DEFAULT         reduce using rule 10 (statement -> package .)
    RETURN          reduce using rule 10 (statement -> package .)


state 11

    (11) statement -> import .

    IDENTIFIER      reduce using rule 11 (statement -> import .)
    VAR             reduce using rule 11 (statement -> import .)
    TYPE            reduce using rule 11 (statement -> import .)
    FOR             reduce using rule 11 (statement -> import .)
    PACKAGE         reduce using rule 11 (statement -> import .)
    IMPORT          reduce using rule 11 (statement -> import .)
    SWITCH          reduce using rule 11 (statement -> import .)
    IF              reduce using rule 11 (statement -> import .)
    FUNC            reduce using rule 11 (statement -> import .)
    $end            reduce using rule 11 (statement -> import .)
    RBRACE          reduce using rule 11 (statement -> import .)
    CASE            reduce using rule 11 (statement -> import .)
    DEFAULT         reduce using rule 11 (statement -> import .)
    RETURN          reduce using rule 11 (statement -> import .)


state 12

    (12) statement -> switch .

    IDENTIFIER      reduce using rule 12 (statement -> switch .)
    VAR             reduce using rule 12 (statement -> switch .)
    TYPE            reduce using rule 12 (statement -> switch .)
    FOR             reduce using rule 12 (statement -> switch .)
    PACKAGE         reduce using rule 12 (statement -> switch .)
    IMPORT          reduce using rule 12 (statement -> switch .)
    SWITCH          reduce using rule 12 (statement -> switch .)
    IF              reduce using rule 12 (statement -> switch .)
    FUNC            reduce using rule 12 (statement -> switch .)
    $end            reduce using rule 12 (statement -> switch .)
    RBRACE          reduce using rule 12 (statement -> switch .)
    CASE            reduce using rule 12 (statement -> switch .)
    DEFAULT         reduce using rule 12 (statement -> switch .)
    RETURN          reduce using rule 12 (statement -> switch .)


state 13

    (13) statement -> map .

    IDENTIFIER      reduce using rule 13 (statement -> map .)
    VAR             reduce using rule 13 (statement -> map .)
    TYPE            reduce using rule 13 (statement -> map .)
    FOR             reduce using rule 13 (statement -> map .)
    PACKAGE         reduce using rule 13 (statement -> map .)
    IMPORT          reduce using rule 13 (statement -> map .)
    SWITCH          reduce using rule 13 (statement -> map .)
    IF              reduce using rule 13 (statement -> map .)
    FUNC            reduce using rule 13 (statement -> map .)
    $end            reduce using rule 13 (statement -> map .)
    RBRACE          reduce using rule 13 (statement -> map .)
    CASE            reduce using rule 13 (statement -> map .)
    DEFAULT         reduce using rule 13 (statement -> map .)
    RETURN          reduce using rule 13 (statement -> map .)


state 14

    (14) statement -> if_statement .

    IDENTIFIER      reduce using rule 14 (statement -> if_statement .)
    VAR             reduce using rule 14 (statement -> if_statement .)
    TYPE            reduce using rule 14 (statement -> if_statement .)
    FOR             reduce using rule 14 (statement -> if_statement .)
    PACKAGE         reduce using rule 14 (statement -> if_statement .)
    IMPORT          reduce using rule 14 (statement -> if_statement .)
    SWITCH          reduce using rule 14 (statement -> if_statement .)
    IF              reduce using rule 14 (statement -> if_statement .)
    FUNC            reduce using rule 14 (statement -> if_statement .)
    $end            reduce using rule 14 (statement -> if_statement .)
    RBRACE          reduce using rule 14 (statement -> if_statement .)
    CASE            reduce using rule 14 (statement -> if_statement .)
    DEFAULT         reduce using rule 14 (statement -> if_statement .)
    RETURN          reduce using rule 14 (statement -> if_statement .)


state 15

    (15) statement -> function .

    IDENTIFIER      reduce using rule 15 (statement -> function .)
    VAR             reduce using rule 15 (statement -> function .)
    TYPE            reduce using rule 15 (statement -> function .)
    FOR             reduce using rule 15 (statement -> function .)
    PACKAGE         reduce using rule 15 (statement -> function .)
    IMPORT          reduce using rule 15 (statement -> function .)
    SWITCH          reduce using rule 15 (statement -> function .)
    IF              reduce using rule 15 (statement -> function .)
    FUNC            reduce using rule 15 (statement -> function .)
    $end            reduce using rule 15 (statement -> function .)
    RBRACE          reduce using rule 15 (statement -> function .)
    CASE            reduce using rule 15 (statement -> function .)
    DEFAULT         reduce using rule 15 (statement -> function .)
    RETURN          reduce using rule 15 (statement -> function .)


state 16

    (16) statement -> method_definition .

    IDENTIFIER      reduce using rule 16 (statement -> method_definition .)
    VAR             reduce using rule 16 (statement -> method_definition .)
    TYPE            reduce using rule 16 (statement -> method_definition .)
    FOR             reduce using rule 16 (statement -> method_definition .)
    PACKAGE         reduce using rule 16 (statement -> method_definition .)
    IMPORT          reduce using rule 16 (statement -> method_definition .)
    SWITCH          reduce using rule 16 (statement -> method_definition .)
    IF              reduce using rule 16 (statement -> method_definition .)
    FUNC            reduce using rule 16 (statement -> method_definition .)
    $end            reduce using rule 16 (statement -> method_definition .)
    RBRACE          reduce using rule 16 (statement -> method_definition .)
    CASE            reduce using rule 16 (statement -> method_definition .)
    DEFAULT         reduce using rule 16 (statement -> method_definition .)
    RETURN          reduce using rule 16 (statement -> method_definition .)


state 17

    (17) statement -> function_literal .

    IDENTIFIER      reduce using rule 17 (statement -> function_literal .)
    VAR             reduce using rule 17 (statement -> function_literal .)
    TYPE            reduce using rule 17 (statement -> function_literal .)
    FOR             reduce using rule 17 (statement -> function_literal .)
    PACKAGE         reduce using rule 17 (statement -> function_literal .)
    IMPORT          reduce using rule 17 (statement -> function_literal .)
    SWITCH          reduce using rule 17 (statement -> function_literal .)
    IF              reduce using rule 17 (statement -> function_literal .)
    FUNC            reduce using rule 17 (statement -> function_literal .)
    $end            reduce using rule 17 (statement -> function_literal .)
    RBRACE          reduce using rule 17 (statement -> function_literal .)
    CASE            reduce using rule 17 (statement -> function_literal .)
    DEFAULT         reduce using rule 17 (statement -> function_literal .)
    RETURN          reduce using rule 17 (statement -> function_literal .)


state 18

    (30) assignment -> IDENTIFIER . DECLARE_ASSIGN expression
    (33) assignment -> IDENTIFIER . ASSIGN expression
    (28) input -> IDENTIFIER . DOT IDENTIFIER LPAREN AMPERSAND IDENTIFIER RPAREN
    (34) llamarFuncion -> IDENTIFIER . LPAREN argument_list_opt RPAREN
    (77) print_statement -> IDENTIFIER . DOT IDENTIFIER LPAREN argument_list_opt RPAREN
    (58) map -> IDENTIFIER . DECLARE_ASSIGN mapLiteral

    DECLARE_ASSIGN  shift and go to state 28
    ASSIGN          shift and go to state 29
    DOT             shift and go to state 30
    LPAREN          shift and go to state 31


state 19

    (31) assignment -> VAR . IDENTIFIER DATATYPE ASSIGN expression
    (32) assignment -> VAR . IDENTIFIER DATATYPE ASSIGN llamarFuncion
    (59) map -> VAR . IDENTIFIER ASSIGN mapLiteral

    IDENTIFIER      shift and go to state 32


state 20

    (78) struct_definition -> TYPE . IDENTIFIER STRUCT LBRACE struct_fields RBRACE

    IDENTIFIER      shift and go to state 33


state 21

    (83) for_statement -> FOR . shortAssignment SEMICOLON condicion SEMICOLON expression block
    (87) for_statement -> FOR . condicion block
    (88) for_statement -> FOR . block
    (86) shortAssignment -> . identifier_list DECLARE_ASSIGN expression
    (41) condicion -> . expression comparador expression
    (90) block -> . LBRACE statement_list RBRACE
    (91) block -> . LBRACE RBRACE
    (84) identifier_list -> . IDENTIFIER
    (85) identifier_list -> . IDENTIFIER COMMA identifier_list
    (35) expression -> . expression comparador expression
    (36) expression -> . expression operadorLogico expression
    (92) expression -> . NUMBER
    (93) expression -> . IDENTIFIER
    (94) expression -> . RUNE
    (95) expression -> . STRING
    (96) expression -> . RAW_STRING
    (97) expression -> . TRUE
    (98) expression -> . FALSE
    (99) expression -> . NIL
    (100) expression -> . expression operator expression
    (101) expression -> . expression DOT IDENTIFIER
    (107) expression -> . MINUS expression
    (108) expression -> . LPAREN expression RPAREN

    LBRACE          shift and go to state 39
    IDENTIFIER      shift and go to state 40
    NUMBER          shift and go to state 41
    RUNE            shift and go to state 42
    STRING          shift and go to state 43
    RAW_STRING      shift and go to state 44
    TRUE            shift and go to state 45
    FALSE           shift and go to state 46
    NIL             shift and go to state 47
    MINUS           shift and go to state 48
    LPAREN          shift and go to state 49

    shortAssignment                shift and go to state 34
    condicion                      shift and go to state 35
    expression                     shift and go to state 36
    block                          shift and go to state 37
    identifier_list                shift and go to state 38

state 22

    (18) package -> PACKAGE . MAIN
    (19) package -> PACKAGE . IDENTIFIER

    MAIN            shift and go to state 50
    IDENTIFIER      shift and go to state 51


state 23

    (20) import -> IMPORT . STRING
    (21) import -> IMPORT . LPAREN import_list RPAREN

    STRING          shift and go to state 52
    LPAREN          shift and go to state 53


state 24

    (53) switch -> SWITCH . expression LBRACE caseBlocks RBRACE
    (35) expression -> . expression comparador expression
    (36) expression -> . expression operadorLogico expression
    (92) expression -> . NUMBER
    (93) expression -> . IDENTIFIER
    (94) expression -> . RUNE
    (95) expression -> . STRING
    (96) expression -> . RAW_STRING
    (97) expression -> . TRUE
    (98) expression -> . FALSE
    (99) expression -> . NIL
    (100) expression -> . expression operator expression
    (101) expression -> . expression DOT IDENTIFIER
    (107) expression -> . MINUS expression
    (108) expression -> . LPAREN expression RPAREN
